API No funciona

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "unofficial-metacritic": "^2.0.0",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
