--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@capacitor/android": "6.2.0",
     "@capacitor/app": "6.0.1",
     "@capacitor/camera": "^6.1.1",
-    "@capacitor/core": "^6.1.2",
+    "@capacitor/core": "^6.2.0",
     "@capacitor/geolocation": "^6.1.0",
     "@capacitor/haptics": "6.0.1",
     "@capacitor/keyboard": "6.0.2",
@@ -48,7 +49,7 @@
     "@angular/cli": "18.2.4",
     "@angular/compiler-cli": "^18.0.0",
     "@angular/language-service": "^18.0.0",
-    "@capacitor/cli": "^6.1.2",
+    "@capacitor/cli": "^6.2.0",
     "@ionic/angular-toolkit": "^11.0.1",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
